[package]
name = "hsk"
version = "0.1.0"
authors = ["Preston Wang-Stosur-Bassett <p.wanstobas@gmail.com>"]
description = "Return HSK Level for Simplified Chinese Characters"
repository = "https://github.com/sotch-pr35mac/hsk"
readme = "README.md"
keywords = ["chinese", "hanzi", "hsk"]
categories = ["text-processing"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"